# tinyGUI

Sample/demo_linux/: Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.status  configure  configure.ac  configure.scan  demo  inc  main.c  src
Sample/demo_linux/.deps/: demo-main.Po
Sample/demo_linux/autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.2  traces.3
Sample/demo_win/driver/: simulater.c  simulater.h
Sample/demo_win/proj/LcdRefresh/LcdRefresh/: LcdRefresh.sln
Sample/demo_win/proj/LcdRefresh/LcdRefresh/Debug/: LcdRefresh.ilk
Sample/demo_win/proj/LcdRefresh/LcdRefresh/LcdRefresh/: LcdRefresh.vcxproj  LcdRefresh.vcxproj.filters  Main.c
Sample/demo_win/proj/LcdRefresh/LcdRefresh/LcdRefresh/Debug/: simulater.obj.enc  vc140.idb
Sample/demo_win/proj/LcdRefresh/LcdRefresh/LcdRefresh/Debug/LcdRefresh.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  LcdRefresh.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Sample/demo_win/proj/LcdRefresh/LcdRefresh/LcdRefresh/x64/Debug/: vc140.idb
Source/inc/: core.h  font.h  tgui.h  tgui_base.h  tgui_config.h  tgui_core.h  tgui_font.h  tgui_type.h
Source/src/: Makefile  Makefile.am  Makefile.in
Source/src/Core/: core.c  tgui_core.c
Source/src/Core/.deps/: libtgui_a-tgui_core.Po
Source/src/Font/: font.c  font_0812.c  tgui_font.c  tgui_font0812.c
Source/src/Graphics2D/: tgui_base.c
Source/src/Graphics2D/.deps/: libtgui_a-tgui_base.Po
(+4 files in other folders)
