#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([cuteGUI], [v1.1.0], [18898365@qq.com])
AC_CONFIG_SRCDIR(main.c)
AC_CONFIG_HEADERS([config.h])


AM_INIT_AUTOMAKE
# Checks for programs.
AC_PROG_CC
AC_PROG_RANLIB
# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES(
	Makefile
	src/Makefile
)

AC_OUTPUT
